# fossilizer

./: .dockerignore  .gitignore  404.html  CODE_OF_CONDUCT.md  Cargo.toml  Changes.md  Dockerfile  LICENSE  Makefile  README.md  chapter_1.html  customization.html  docker-compose.yml  index.html  index.js  print.html  quick-start.html  searchindex.js  searchindex.json
.devcontainer/: Dockerfile  devcontainer.json
_pagefind/: pagefind-entry.json  pagefind.en_1d3b204fd6.pf_meta  pagefind.en_2f23eb6253.pf_meta  pagefind.en_32bb385597.pf_meta  pagefind.en_348d6fec89.pf_meta  pagefind.en_378499bee3.pf_meta  pagefind.en_3d6dc0c266.pf_meta  pagefind.en_86b6a7a55a.pf_meta  pagefind.en_9a57570f57.pf_meta  pagefind.en_9d9b5ee47e.pf_meta  pagefind.en_b620885e7e.pf_meta  pagefind.en_c53f482b88.pf_meta  pagefind.en_cdfc26f4fb.pf_meta  pagefind.en_de69349ae5.pf_meta
cli/: build.html  import.html  index.html  init.html  mastodon.html  serve.html  upgrade.html
developers/: index.html
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docker/: backup-loop.sh
docs/: book.toml  deployment.md  index.html
pagefind/: pagefind-entry.json  pagefind.en_115e9ffcfc.pf_meta  pagefind.en_1344665bc7.pf_meta  pagefind.en_1f7edb5b10.pf_meta  pagefind.en_2488d8c4f8.pf_meta  pagefind.en_2f4fb49abd.pf_meta  pagefind.en_372354e772.pf_meta  pagefind.en_37aab5d11f.pf_meta  pagefind.en_39d29e9630.pf_meta  pagefind.en_3b610609d2.pf_meta  pagefind.en_3d1e0f577e.pf_meta  pagefind.en_3d2f9836f6.pf_meta  pagefind.en_3e57d20504.pf_meta  pagefind.en_3eaeb565c9.pf_meta  pagefind.en_3ee5576aea.pf_meta  pagefind.en_41e7b6d99e.pf_meta  pagefind.en_42bfeb7881.pf_meta  pagefind.en_44a70cbfe3.pf_meta  pagefind.en_46dc79a8d8.pf_meta  pagefind.en_50f4f56beb.pf_meta  pagefind.en_522a911178.pf_meta  pagefind.en_6923e1c5c6.pf_meta  pagefind.en_74da5f2241.pf_meta  pagefind.en_74e71a1a87.pf_meta  pagefind.en_75842d8137.pf_meta  pagefind.en_7a5d761d5a.pf_meta  pagefind.en_88ca1ef7d0.pf_meta  pagefind.en_8f735957fa.pf_meta  pagefind.en_9481abd84f.pf_meta  pagefind.en_981d9a8f4d.pf_meta  pagefind.en_9d13f9edf7.pf_meta  pagefind.en_9f3cc33cd2.pf_meta  pagefind.en_a34cd8eed3.pf_meta  pagefind.en_a44addc5a0.pf_meta  pagefind.en_a5a507e1c5.pf_meta  pagefind.en_a9ab49fcf5.pf_meta  (+15 more)
(+31084 files in other folders)
