[package]
name = "ap-fossilizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive", "env", "cargo"] }
config = "0.13.3"
env_logger = "0.10.0"
flate2 = "1.0.26"
lazy_static = "1.4.0"
log = "0.4.19"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
simple-logging = "2.0.2"
tar = "0.4.38"
