[package]
name = "fossilizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitystreams = "0.6.2"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.8", features = ["derive", "env", "cargo"] }
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
fallible-iterator = "0.3.0"
flate2 = "1.0.26"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
log = "0.4.19"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking", "json", "gzip"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
rust-embed = "6.7.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sha256 = "1.1.4"
simple-logging = "2.0.2"
tar = "0.4.38"
tera = "1.19.0"
url = { version = "2.4.0", features = ["serde"] }
